# langfuse-custom-tracer

./: .env.example  .gitignore  FEATURE_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  TESTING.md  live_test.py  pricing.json  pyproject.toml  pytest.ini  pytest_output.txt  run_tests.py  test_results.txt  v1_automatic_tracing_docs.md  v3_automatic_tracing_docs.md
examples/: debug_image_tokens.py  debug_tokens.py  env_setup_example.py  extracted_data.json  test_image.py  test_parallel.py  test_pdf_extraction.py  test_pypi_trace.py  test_run.py  test_run_anthropic.py  test_traced_anthropic.py  test_traced_gemini.py
langfuse_custom_tracer/: __init__.py  auto.py  client.py  context.py  factory.py  pricing_manager.py  scoring.py
langfuse_custom_tracer/clients/: __init__.py  traced_llm.py
langfuse_custom_tracer/tracers/: __init__.py  anthropic.py  base.py  gemini.py
tests/: __init__.py  conftest.py  test_anthropic_tracer.py  test_auto_patch.py  test_base_tracer.py  test_client.py  test_factory.py  test_gemini_tracer.py  test_pricing_manager.py  test_traced_llm.py
